plugins {
    id 'application'
}

project.version = "1.0.0"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'info.picocli:picocli:4.7.3'
    implementation 'org.hdrhistogram:HdrHistogram:2.1.12'
    implementation 'com.hivemq:hivemq-mqtt-client:1.3.0'
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.37'
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

application {
    mainClass = 'io.streamnative.mqtt.perf.MqttPerf'
}
